--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
     "@splinetool/react-spline": "^4.1.0",
     "@tailwindcss/vite": "^4.1.14",
+    "axios": "^1.12.2",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "emailjs-com": "^3.2.0",
     "express": "^5.1.0",
     "framer-motion": "^12.23.22",
     "fs": "^0.0.1-security",
-    "nodemailer": "^7.0.6",
+    "lucide-react": "^0.546.0",
+    "nodemailer": "^7.0.9",
+    "path": "^0.12.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
